Mobile: fix menu-wrap z-index bug in IE Mobile

--- a/blocks/m-layout/css/m-layout.css
+++ b/blocks/m-layout/css/m-layout.css
@@ -6,6 +6,8 @@
 }
 
 .m-layout__body {
+	position: relative;
+
 	overflow-x: hidden;
 
 	min-height: 100%;
@@ -13,6 +15,7 @@
 
 .m-layout__menu-wrap {
 	position: fixed;
+	z-index: -1;
 	top: 0;
 	right: 0;
 	bottom: 0;
