--- a/mobile/css/doska.css
+++ b/mobile/css/doska.css
@@ -379,11 +379,13 @@ blockquote {
   height: 100%;
 }
 .m-layout__body {
+  position: relative;
   overflow-x: hidden;
   min-height: 100%;
 }
 .m-layout__menu-wrap {
   position: fixed;
+  z-index: -1;
   top: 0;
   right: 0;
   bottom: 0;
